# mmri-update-notification-server

./: Cargo.toml  Containerfile  Dockerfile
.github/workflows/: build-and-push.yml  docker-publish.yml
src/: main.rs
templates/: index.html.tera
