[package]
name = "mmri-diun-receiver"
version = "0.1.4"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
rocket = { version = "0.5.0", features = [ "json" ] }
rocket_dyn_templates = { version = "0.2.0", features = [ "tera" ] }
serde = { version = "1.0", features = [ "derive" ] }
